SampleWebApiAspNetCore/Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-api-service
spec:
  selector:
    app: sample-web-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
