SampleWebApiAspNetCore/Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-web-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aysegul.dotnetcore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-web-api-service
            port:
              number: 80
